--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,9 @@
 html, body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background: rgb(221, 221, 221);
-  height: 100vh;
+  min-height: 100vh;
   text-align: center;
 }
 
@@ -31,6 +34,7 @@ main {
 .header-cont h3 {
   text-transform: capitalize;
   font-weight: 300;
+  font-size: 20px;
 }
 
 .quiz-cont {
@@ -160,4 +164,23 @@ a {
   flex-wrap: wrap;
   justify-content: center;
   width: auto;
+}
+
+@media (max-width: 650px) {
+  .header-cont h1 {
+    font-size: 20px;
+  }
+
+  .header-cont h3 {
+    font-size: 16px;
+  }
+
+  #answers li {
+    min-width: 150px;
+    font-size: 18px;
+  }
+
+  #answers {
+    max-width: 400px;
+  }
 }
