--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -81,6 +81,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
 }
 
 #answers li:hover {
@@ -89,12 +90,14 @@ main {
 
 #answers li.right {
     border-color: #1ea55b;
-    color: #1ea55b;
+    color: #eee;
+    background: rgba(30, 165, 91, 0.9);
 }
 
 #answers li.wrong {
     border-color: #dc0a0a;
-    color: #dc0a0a;
+    color: #eee;
+    background: rgba(220, 10, 10, 0.9);
 }
 
 button.next {
